Fix banner text font and alignment (#10251)

--- a/src/plugins/explore/public/components/experience_banners/classic_experience_banner/classic_experience_banner.scss
+++ b/src/plugins/explore/public/components/experience_banners/classic_experience_banner/classic_experience_banner.scss
@@ -13,10 +13,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: $ouiFontSizeS;
 
     // Adding some specificity by nesting
     .exploreClassicExperienceBanner__newExperienceButton {
-      font-size: $ouiFontSizeXS;
       height: $ouiSizeL;
     }
   }
